# duvo

.claude/: settings.local.json
backend/: pyproject.toml
backend/.claude/: settings.local.json
backend/app/: agent.py  evaluation.py  main.py  models.py  tools.py
backend/app/routes/: chat.py  downloads.py  evaluations.py
backend/data/: climate_data_2023.csv  search_2026-02-20_14-30-01.csv
backend/data/evaluations/: 73500c43-f59c-42e7-bebd-f8637adabacb.json
docs/plans/: 2026-02-20-chat-app-design.md  2026-02-20-chat-app-plan.md
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/components/: Chat.tsx
frontend/src/lib/: api.ts
specs/: 2026-02-20-csv-export-tool.md
